--- a/style/style.css
+++ b/style/style.css
@@ -6,10 +6,18 @@
 }
 body {
     background-color: lightblue;
+    font-family: 'Nerko One', cursive;
 }
 .conteiner {
     width: 60%;
     height: 1000px;
     margin: 0 auto;
-    background-color: rgb(255, 152, 152);
+    background-color: lightblue
+}
+h1{
+    text-align: center;
+    font-size: 70px;
+    color: white;
+    text-shadow:  2px  2px 2px #777777;
+    margin-bottom: 20px;
 }
